[package]
name = "earnConnector"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.7", features = ["runtime-tokio", "mysql", "chrono"] }
tokio = { version = "1.0", features = ["full"] }
google-sheets4 = "5.0"
yup-oauth2 = "8.3"
serde = { version = "1.0", features = ["derive"] }
hyper = "0.14"
hyper-rustls = "0.24"
chrono = { version = "0.4", features = ["serde"] }